Ignored session file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 Firmware/mqttsn_client_publisher/pca10056/ses/Output/
+
+Firmware/mqttsn_client_publisher/pca10056/ses/thread_mqtt_sn_client_publisher_pca10056.emSession
